save config and svg; fix "zooming disabled by negative z-index"

--- a/vizxtime.css
+++ b/vizxtime.css
@@ -77,10 +77,10 @@ body {
     position: relative;
     /* so that it is in the same "stacking context" as #info-pane.
     https://philipwalton.com/articles/what-no-one-told-you-about-z-index/ */
-    z-index: 2;
+    z-index: 1;
 }
 
-#info-pane { z-index: 1; }
+#info-pane { z-index: 2; }
 
 #data-field-names { padding: 2px; }
 
